# ouch

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: manual-release.yml  push-feature-branch.yml  push-release-branch.yml  pypi-publish.yml
bindings/python/: Cargo.toml  build.rs  pyproject.toml  readme.md
bindings/python/examples/: 01_con_type.py  02_clt2svc_connect_manual_example.py  03_clt2svc_connect_auto_example.py  clt2svc_connect_auto_example.py  clt2svc_connect_manual_example.py
bindings/python/micromamba/: build_env.yaml  ouch_build_env.yml
bindings/python/ouch_bindings_py/: __init__.py  ouch_bindings_py.pyi
bindings/python/ouch_connect/: __init__.py  ouch_connect.pyi  pyi.template.cog
bindings/python/ouch_connect_nonblocking/: __init__.py  ouch_connect_nonblocking.pyi
bindings/python/src/: callback.rs  clt.rs  lib.rs  svc.rs
bindings/python/tests/: 01_con_type_test.py  01_types_and_docs_test.py  02_clt2svc_connect_manual_test.py  03_clt2svc_connect_auto_test.py  test_examples.rs  test_python_examples.rs  test_python_examples.rs.bk
connect/core/: Cargo.toml
connect/core/src/: prelude.rs
connect/core/src/core/: mod.rs
connect/core/src/core/protocol/: mod.rs
connect/nonblocking/: Cargo.toml  readme.md
connect/nonblocking/benches/: ouch_nonblocking_bench.rs
connect/nonblocking/examples/: ouch_clt2clt_nonblocking_busywait_example.rs
connect/nonblocking/src/: clt.rs  lib.rs  pool.rs  prelude.rs  svc.rs
connect/nonblocking_python/: Cargo.toml  pyproject.toml
connect/nonblocking_python/examples/: clt.py  clt2svc_connect_auto_example.py  clt2svc_connect_example.py  clt2svc_connect_manual_example.py  example.py
connect/nonblocking_python/ouch_connect_nonblocking_python/: __init__.py  ouch_connect_nonblocking_python.pyi
connect/nonblocking_python/src/: callback.rs  callbacks.rs  callbacks_old.rs  clt.rs  core.rs  lib.rs  svc.rs
model/: Cargo.toml  readme.md
model/benches/: ouch_model_bench.rs
model/src/: lib.rs  prelude.rs
model/src/model/: field_types.rs  mod.rs  optional_filed_types.rs  ouch.rs  types.rs
model/src/model/appendages/: mod.rs
model/src/model/clt/: _01_enter_order.rs  _02_replace_order.rs  _03_cancel_order.rs  _04_modify_order.rs  _05_account_query_req.rs  account_query_req.rs  cancel_order.rs  enter_order.rs  mod.rs  modify_order.rs  replace_order.rs
model/src/model/svc/: _00_system_event.rs  _01_order_accepted.rs  _02_order_replaced.rs  _03_order_canceled.rs  _04_order_aiq_canceled.rs  _05_order_executed.rs  _06_broken_trade.rs  _07_order_rejected.rs  _08_cancel_pending.rs  _09_cancel_reject.rs  _10_priority_update.rs  _11_order_modified.rs  _12_order_restated.rs  _13_account_query_res.rs  account_query_res.rs  broken_trade.rs  cancel_pending.rs  cancel_reject.rs  mod.rs  order_accepted.rs  order_aiq_canceled.rs  order_canceled.rs  order_executed.rs  order_modified.rs  order_rejected.rs  order_replaced.rs  order_restated.rs  priority_update.rs  system_event.rs
model/src/unittest/: mod.rs
readme/: packaging_and_publishing.md  python_bindings.md
