[workspace]
members = ["model", "connect/core", "connect/nonblocking", "bindings/python"]

resolver = "2"

[workspace.package]
version = "5.0.0"                                            # NOTE remembe to update this and sbelow dependencies for byteserde and byteserde_derive
authors = ["Softstream <softstream.link@gmail.com>"]
readme = "readme.md"
license-file = "LICENSE"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/softstream-link/soupbintcp"
keywords = ["exchange", "protocol"]
categories = ["API bindings"]


[workspace.dependencies]
# used only by ouch_model
byteserde = { version = "~0.6" }
byteserde_derive = { version = "~0.6" }
byteserde_types = { version = "~0.6" }
derive_more = { version = "0.99" }                 # try_into, etc
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = { version = "0.4.26" }
bytes = { version = "1.5" }     # networking


soupbintcp_model = { version = "^4.0" }               # used only by ouch_model
soupbintcp_connect_nonblocking = { version = "^4.0" } # used only by ouch_connect_core

# used only by ouch_connect_nonblocking
links_core = { version = "~0.1", path = "../links/core" }                         # only used in unitests
ouch_model = { version = "~5.0.0", path = "./model" }
ouch_connect_core = { version = "~5.0.0", path = "./connect/core" }
ouch_connect_nonblocking = { version = "~5.0.0", path = "./connect/nonblocking" }
ouch_bindings_python = { version = "~5.0.0", path = "./bindings/python" }

# used by nonblocking_python
lazy_static = { version = "1.4" }

# logging
log = { version = "0.4" }
env_logger = { version = "0.10" }
colored = { version = "2.0" }
text-diff = "0.4"

# benches
criterion = { version = "0.5" }
