[workspace]
members = ["model", "connect/core", "connect/nonblocking", "bindings/python"]

resolver = "2"

[workspace.package]
version = "5.0.1-rc.5"
authors = ["Softstream <softstream.link@gmail.com>"]
readme = "readme.md"
license-file = "LICENSE"
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/softstream-link/soupbintcp"
keywords = ["exchange", "protocol"]
categories = ["API bindings"]


[workspace.dependencies]
# used only by ouch_model
byteserde = { version = "0.6.2" }
byteserde_derive = { version = "0.6.2" }
byteserde_types = { version = "0.6.2" }
derive_more = { version = "0.99" }                 # try_into, etc
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


chrono = { version = "0.4.26" }
bytes = { version = "1.5" }     # networking
spin = { version = "0.9" }

links_core = { version = "0.2" }            # only used in model/unitests
links_nonblocking = { version = "0.2" }     # only used bindings/python
links_bindings_python = { version = "0.2" } # only used bindings/python

soupbintcp_model = { version = "~4.0" }               # used only by ouch_model ~ required to avoid updating to 4.1 which is not compatible
soupbintcp_connect_nonblocking = { version = "~4.0" } # used only by ouch_connect_core ~ required to avoid updating to 4.1 which is not compatible

# used only by ouch_connect_nonblocking
ouch_model = { version = "~5.0.1-rc.5", path = "./model" }
ouch_connect_core = { version = "~5.0.1-rc.5", path = "./connect/core" }
ouch_connect_nonblocking = { version = "~5.0.1-rc.5", path = "./connect/nonblocking" }
ouch_bindings_python = { version = "~5.0.1-rc.5", path = "./bindings/python" }

# used by nonblocking_python
lazy_static = { version = "1.4" }

# logging
log = { version = "0.4" }
env_logger = { version = "0.11" }
colored = { version = "2.0" }
text-diff = "0.4"

# benches
criterion = { version = "0.5" }
