[package]
name = "ouch_model"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

description = "Data model bindings for ouch exchange protocol"

[dependencies]
byteserde = { workspace = true }
byteserde_derive = { workspace = true }
byteserde_types = { workspace = true }
derive_more = { workspace = true }

chrono = { workspace = true }

soupbintcp_model = { workspace = true }


[dev-dependencies]
# includes network related methods for setting up unit tests
links_core = { workspace = true, features = ["unittest"] }

# benchmarking
criterion = { workspace = true }

# logging
log = { workspace = true }
env_logger = { workspace = true }
colored = { workspace = true }


# BENCHMARKS
[[bench]]
name = "ouch_model_bench"
harness = false
