[package]
name = "ouch_bindings_py"
version.workspace = true
authors.workspace = true
readme = "readme.md"
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ouch_bindings_py"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = { version = "0.20" }

[dependencies]
pyo3 = { version = "0.20", features = [
    "extension-module", # https://pyo3.rs/v0.20.0/features.html?highlight=multiple%20imp#extension-module
    # "auto-initialize",    # https://pyo3.rs/v0.20.0/features.html?highlight=multiple%20imp#auto-initialize
    "abi3",               # https://pyo3.rs/v0.20.0/features.html?highlight=multiple%20imp#abi3
    "multiple-pymethods", # https://pyo3.rs/v0.20.0/features.html?highlight=multiple%20imp#multiple-pymethods
    "abi3-py310",
], optional = true }
pyo3-log = "0.9" # allows rust logging to write to python logging


ouch_connect_nonblocking = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

log = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
links_core = { workspace = true, features = ["unittest"] }
pyo3 = { version = "0.20", features = [
    # "extension-module",   # https://pyo3.rs/v0.20.0/features.html?highlight=multiple%20imp#extension-module
    # "auto-initialize",    # https://pyo3.rs/v0.20.0/features.html?highlight=multiple%20imp#auto-initialize
    "abi3",               # https://pyo3.rs/v0.20.0/features.html?highlight=multiple%20imp#abi3
    "multiple-pymethods", # https://pyo3.rs/v0.20.0/features.html?highlight=multiple%20imp#multiple-pymethods
    "abi3-py310",
] }

[features]
default = ["dep:pyo3"]
