[package]
name = "ouch_bindings_python"
version.workspace = true
authors.workspace = true
readme = "readme.md"
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
# this is the name of python module (i.e. import ouch_connect) remember to change it in pyproject.toml, #[pymodule]/lib.rs, and here
name = "ouch_connect"
crate-type = ["cdylib"]

[build-dependencies]
pyo3-build-config = { version = "0.20" } # used in the build.rs

[dependencies]
pyo3 = { version = "0.20", features = ["multiple-pymethods", "auto-initialize"] } # feature needed for 'cargo build' to work otherwise 'maturin develop' is configured via pyproject.toml
pyo3-log = "0.9"                                               # allows rust logging to write to python logging


ouch_connect_nonblocking = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }

log = { workspace = true }
lazy_static = { workspace = true }

[dev-dependencies]
links_core = { workspace = true, features = ["unittest"] }
