[package]
name = "ouch_connect_core"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
soupbintcp_connect_nonblocking = { workspace = true }
bytes = { workspace = true }

ouch_model = { workspace = true }