[package]
name = "ouch_connect_core"
version.workspace = true
authors.workspace = true
readme.workspace = true
license-file.workspace = true
edition.workspace = true
rust-version.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

description = "Core Structures and Traits for OUCH Connectors"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
links_nonblocking = { workspace = true }
soupbintcp_connect_nonblocking = { workspace = true }
ouch_model = { workspace = true, optional = true }

bytes = { workspace = true }


[features]
default = ["dep:ouch_model"]
full = ["unittest"]
unittest = [
    "dep:ouch_model",
    "ouch_model/unittest",
] # exists to provide a vector of all possible ouch messages
